# protoslang

./: CMakeLists.txt  README.md  guide.md  outline.md
include/: common.h  compiler.h  debug.h  memory.h  module.h  object.h  table.h  value.h
lexer/: lexer.c  lexer.h
src/: compiler.c  debug.c  main.c  memory.c  module.c  object.c  table.c  value.c
test/: main.sl
vm/: vm.c  vm.h
